--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
+    "build": "tsc && cd ../client && npm run build && cp -r dist ../server/build/client",
+    "start": "node build/server/index.js",
     "dev": "ts-node-dev index.ts",
-    "start": "tsc && node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
